--- a/Challenge_Frontend.html
+++ b/Challenge_Frontend.html
@@ -39,7 +39,7 @@
             <br />
             <input type="checkbox" name="Jazz" value="Jazz"/> Jazz
             <br />
-            <input type="checkbox" name="Folclorica" value="Folclorica"/> Folclorica
+            <input type="checkbox" name="Tradizionale" value="Tradizionale"/> Tradizionale
         </div>
         <div>
             <p>Accetti i termini e le condizioni?</p>
