--- a/Challenge_Frontend.html
+++ b/Challenge_Frontend.html
@@ -29,17 +29,17 @@
         </div>
         <div>
             <p>Indica quali sono i tuoi generi musicali preferiti:</p>
-            <input type="checkbox" name="Pop" value="Pop"/> Pop
+            <input type="checkbox"/> Pop
             <br />
-            <input type="checkbox" name="Rock" value="Rock"/> Rock
+            <input type="checkbox"/> Rock
             <br />
-            <input type="checkbox" name="Classica" value="Classica"/> Classica
+            <input type="checkbox"/> Classica
             <br />
-            <input type="checkbox" name="Rap" value="Rap"/> Rap
+            <input type="checkbox"/> Rap
             <br />
-            <input type="checkbox" name="Jazz" value="Jazz"/> Jazz
+            <input type="checkbox"/> Jazz
             <br />
-            <input type="checkbox" name="Tradizionale" value="Tradizionale"/> Tradizionale
+            <input type="checkbox"/> Tradizionale
         </div>
         <div>
             <p>Accetti i termini e le condizioni?</p>
