--- a/U1-S1/esercizio1.html
+++ b/U1-S1/esercizio1.html
@@ -3,7 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cristina Mastellaro</title>
+    <style>
+      .title {
+        margin-left: 15px;
+      }
+      main {
+        margin-left: 1.5em;
+        text-align: justify;
+      }
+      hr {
+        margin: 2em 0;
+      }
+      #lavoro {
+        margin: 0 0 2em 1.5em;
+      }
+      table {
+        border-collapse: collapse;
+        margin-top: 2em;
+      }
+      td,
+      th {
+        border: 1px solid #ddd;
+        padding: 8px;
+      }
+      #competenze {
+        margin-top: 2.5em;
+      }
+      #footer {
+        color: white;
+        background-color: black;
+        bottom: 0;
+        text-align: center;
+        padding: 1em;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <a href="#footer">Scorri giù</a>
+    <h1 class="title">Cristina Mastellaro</h1>
+    <h2 class="title">mail: cristinamastellaro8@gmail.com</h2>
+    <main>
+      <a href=""><img src="modificata.jpg" alt="Foto mia" height="400px" /></a>
+      <p>
+        Mi chiamo Cristina Mastellaro, sono nata l'8 gennaio 2000 e vivo vicino
+        a Padova.
+      </p>
+      <p>
+        Nel tempo libero mi piace ascoltare musica, soprattutto canzoni pop
+        inglesi, e cantare (faccio parte di un coro). Mi piace camminare e
+        perdermi in mezzo ai campi; leggere, in particolare narrativa, fantasy e
+        classici.
+      </p>
+      <p>
+        Dalla foto si potrà dedurre che sono <a href="#">castana e riccia</a>,
+        con gli occhi nocciola. Non si potrà invece dedurre la mia altezza, che
+        rivelerò essere al di sotto della media nazionale. Ambisco a vedere e
+        conoscere il mondo, scrivere un libro, avere una casa enorme e ad essere
+        felice.
+      </p>
+    </main>
+    <hr />
+    <div id="lavoro">
+      <h3>Esperienza lavorativa</h3>
+      <a href="https://github.com/CristinaMastellaro/Es_Epicode" target="_blank"
+        ><p>GitHub</p></a
+      >
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Esperienze professionali e accademiche</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Operaia</td>
+            </tr>
+            <tr>
+              <td>Cameriera</td>
+            </tr>
+            <tr>
+              <td>Laurea triennale in lettere moderne</td>
+            </tr>
+            <tr>
+              <td>Stagista programmatrice DevOps</td>
+            </tr>
+          </tbody>
+        </table>
+        <div id="competenze">
+          <h4>Le mie competenze</h4>
+          <ul>
+            <li>Basi di groovy e node.js</li>
+            <li>Adattabilità</li>
+            <li>Resistenza allo stress</li>
+          </ul>
+          <h4>Competenze da acquisire</h4>
+          <ol>
+            <li>Conoscenze da full-stack developer</li>
+            <li>Lavorare in gruppo</li>
+            <li>Leadership</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+    <footer id="footer">
+      <p>Copyright Cristina Mastellaro</p>
+    </footer>
+  </body>
 </html>
