--- a/U1-S1/G2/esercizio2.html
+++ b/U1-S1/G2/esercizio2.html
@@ -105,9 +105,7 @@
         </table>
         <p>
           Un test di valutazione potrà essere fatto tramite il
-          <a href="https://www.placecats.com/800/800" target="_blank"
-            >tool online</a
-          >
+          <a href="https://www.placecats.com" target="_blank">tool online</a>
           dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto
           il nostro obiettivo ed essere stati dei veri developers come loro:
         </p>
@@ -153,7 +151,7 @@
         <em
           >Testata online di Mario Rossi, registrata con prot. n.213/2018 - via
           Luigi Einaudi 2 - Milano. P.IVA 00112233.
-          <a href="info@epicode.school" target="_blank"
+          <a href="mailto:info@epicode.school" target="_blank"
             >info@epicode.school</a
           ></em
         >
